--- a/source/photo.html
+++ b/source/photo.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body>
@@ -245,11 +245,13 @@
                       <rect y="40" width="48" height="3" />
                     </svg>
                   </button>
-                  <div class="form-posting__control form-posting__control--fill"></div>
+                  <div class="form-posting__control">
+                    <div class="form-posting__control--fill"></div>
+                  </div>
                 </li>
                 <li class="form-posting__item">
                   <button class="form-posting__contrast">
-                    <svg class="form-posting__item-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    <svg class="form-posting__item-icon form-posting__item-icon--contrast" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px"
                       viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92"
                       xml:space="preserve">
@@ -258,7 +260,9 @@
                       <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519" />
                     </svg>
                   </button>
-                  <div class="form-posting__control form-posting__control--contrast"></div>
+                  <div class="form-posting__control">
+                    <div class="form-posting__control--contrast"></div>
+                  </div>
                 </li>
               </ul>
             </div>
