--- a/source/index.html
+++ b/source/index.html
@@ -13,18 +13,86 @@
     <header class="page-header">
       <nav class="main-nav main-nav--opened">
         <div class="logo-wrapper">
-          <a class="logo page-header__logo">
-            <picture>
-              <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
-              <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-              <img src="img/logo-pink-white-mobile.svg" alt="Логотип Pink»">
-            </picture>
-          </a>
+          <div class="page-header__logo">
+            <svg class="page-header__logo-image page-header__logo-image--mobile" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px"
+              viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
+              <g>
+                <path fill="#FFFFFF"
+                  d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z" />
+                <path fill="#FFFFFF"
+                  d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z" />
+                <path fill="#FFFFFF"
+                  d="M30.87,1.32c0-0.676,0.579-1.256,1.256-1.256h0.354c0.58,0,0.934,0.29,1.288,0.74l13.684,17.45V1.256 C47.451,0.58,47.998,0,48.707,0c0.676,0,1.223,0.58,1.223,1.256v20.348c0,0.676-0.482,1.191-1.158,1.191h-0.129 c-0.548,0-0.934-0.322-1.32-0.772L33.349,4.153v17.45c0,0.676-0.547,1.256-1.255,1.256c-0.677,0-1.224-0.58-1.224-1.256V1.32z" />
+                <path fill="#FFFFFF"
+                  d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z" />
+              </g>
+            </svg>
+
+            <svg class="page-header__logo-image page-header__logo-image--tablet" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px"
+              viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
+              <g>
+                <path fill="#FFFFFF"
+                  d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z" />
+                <path fill="#FFFFFF"
+                  d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z" />
+                <path fill="#FFFFFF"
+                  d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.224,0.58,1.224,1.256v20.349c0,0.676-0.481,1.19-1.158,1.19h-0.129c-0.548,0-0.935-0.321-1.319-0.772l-13.975-17.868v17.45c0,0.676-0.547,1.256-1.256,1.256c-0.676,0-1.223-0.58-1.223-1.256V18.532 H102.744z" />
+                <path fill="#FFFFFF"
+                  d="M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.168 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.935c0,0.676-0.578,1.288-1.286,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.402-10.463l-4.863,4.861 v4.894c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z" />
+              </g>
+              <path fill="#FFFFFF" d="M60.498,28.266" />
+              <path fill="#FFFFFF"
+                d="M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.742-5.927-5.802-10.531-11.927-10.531s-11.186,4.604-11.927,10.531h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.741,5.926,5.802,10.53,11.927,10.53s11.185-4.604,11.927-10.53h1.814 c0.742,5.926,5.802,10.53,11.927,10.53s11.186-4.604,11.927-10.53H59c0.012,0,0.023-0.004,0.036-0.004 C59.931,29.842,60.728,29.125,60.462,28.016z M26.315,29.844c-0.715,4.272-4.421,7.531-8.896,7.531c-4.475,0-8.18-3.259-8.896-7.531 c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.715-4.271,4.421-7.531,8.896-7.531c4.475,0,8.18,3.26,8.896,7.531 c0.082,0.489,0.135,0.988,0.135,1.5S26.397,29.355,26.315,29.844z M51.99,29.844c-0.716,4.272-4.421,7.531-8.896,7.531 c-4.475,0-8.181-3.259-8.896-7.531c-0.082-0.488-0.135-0.988-0.135-1.5s0.053-1.011,0.135-1.5c0.716-4.271,4.421-7.531,8.896-7.531 c4.475,0,8.181,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5S52.072,29.355,51.99,29.844z" />
+            </svg>
+
+            <svg class="page-header__logo-image page-header__logo-image--desktop" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px"
+              viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
+              <g>
+                <path fill="#FFFFFF"
+                  d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z" />
+                <path fill="#FFFFFF"
+                  d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z" />
+                <path fill="#FFFFFF"
+                  d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.224,0.58,1.224,1.256v20.349c0,0.676-0.481,1.19-1.158,1.19h-0.129c-0.548,0-0.935-0.321-1.319-0.772l-13.975-17.868v17.45c0,0.676-0.547,1.256-1.256,1.256c-0.676,0-1.223-0.58-1.223-1.256V18.532 H102.744z" />
+                <path fill="#FFFFFF"
+                  d="M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.168 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.935c0,0.676-0.578,1.288-1.286,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.402-10.463l-4.863,4.861 v4.894c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z" />
+              </g>
+              <path fill="#D22856"
+                d="M98.498,9.875c-2.002,0-3.623-1.623-3.623-3.624c0,2.001-1.623,3.624-3.625,3.624 c2.002,0,3.625,1.623,3.625,3.624C94.875,11.498,96.496,9.875,98.498,9.875z" />
+              <g>
+                <path fill="#FFFFFF"
+                  d="M43.094,19.313c0.246,0,0.489,0.014,0.73,0.033c-0.437-0.728-1.227-1.221-2.136-1.221 c-0.877,0-1.614-0.568-1.884-1.354c-0.727,0.208-1.425,0.482-2.089,0.816c0.062,0.017,0.122,0.038,0.188,0.038c1.104,0,2,0.896,2,2 c0,0.096-0.015,0.188-0.028,0.281C40.875,19.524,41.959,19.313,43.094,19.313z" />
+                <path fill="#FFFFFF"
+                  d="M60.462,28.016c-0.002-0.009-5.175-21.365-5.175-21.365C54.926,4.303,52.694,0,46.688,0 c-0.829,0-1.5,0.671-1.5,1.5s0.671,1.5,1.5,1.5c4.856,0,5.575,3.729,5.639,4.143l4.767,19.701h-2.073 c-0.445-3.557-2.453-6.628-5.305-8.522c-0.897,0.379-1.529,1.269-1.529,2.303c0,0.088-0.015,0.171-0.026,0.256 c1.991,1.358,3.415,3.489,3.829,5.964c0.082,0.489,0.135,0.988,0.135,1.5s-0.053,1.012-0.135,1.5 c-0.716,4.272-4.421,7.531-8.896,7.531c-4.475,0-8.181-3.259-8.896-7.531c-0.082-0.488-0.135-0.988-0.135-1.5 s0.053-1.011,0.135-1.5c0.147-0.878,0.427-1.711,0.808-2.483c-1.034-0.078-1.852-0.932-1.852-1.985 c0-0.189-0.077-0.357-0.192-0.489c-0.938,1.469-1.569,3.15-1.795,4.958h-1.82c-0.741-5.927-5.802-10.531-11.927-10.531 S6.235,20.917,5.493,26.844H3.42L8.187,7.143C8.25,6.729,8.97,3,13.826,3c0.829,0,1.5-0.671,1.5-1.5S14.655,0,13.826,0 C7.82,0,5.588,4.303,5.227,6.651c0,0-5.173,21.356-5.175,21.365c-0.266,1.109,0.531,1.826,1.426,1.826 c0.012,0,0.023,0.004,0.036,0.004h3.982c0.079,0.628,0.215,1.237,0.387,1.831c0.059-0.106,0.102-0.224,0.102-0.354 c0-1.104,0.896-2,2-2c0.166,0,0.324,0.025,0.478,0.063c-0.043-0.343-0.074-0.688-0.074-1.042c0-0.512,0.053-1.011,0.135-1.5 c0.715-4.271,4.421-7.531,8.896-7.531s8.18,3.26,8.896,7.531c0.082,0.489,0.135,0.988,0.135,1.5s-0.053,1.012-0.135,1.5 c-0.715,4.272-4.421,7.531-8.896,7.531c-2.022,0-3.883-0.67-5.386-1.794c-0.35,0.302-0.8,0.491-1.299,0.491 c-0.413,0-0.749,0.336-0.749,0.748c0,0.29-0.065,0.564-0.176,0.812c2.075,1.708,4.722,2.743,7.614,2.743 c6.125,0,11.185-4.604,11.927-10.53h1.814c0.742,5.926,5.802,10.53,11.927,10.53s11.186-4.604,11.927-10.53H59 c0.012,0,0.023-0.004,0.036-0.004C59.931,29.842,60.728,29.125,60.462,28.016z" />
+              </g>
+              <g>
+                <g>
+                  <path fill="#D22856"
+                    d="M50.686,16.125c-2.485,0-4.499-2.014-4.499-4.499c0,2.485-2.014,4.499-4.499,4.499 c2.485,0,4.499,2.014,4.499,4.499C46.187,18.139,48.2,16.125,50.686,16.125z" />
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path fill="#D22856"
+                    d="M37.904,19.626c-1.519,0-2.749-1.23-2.749-2.749c0,1.519-1.23,2.749-2.749,2.749 c1.519,0,2.749,1.229,2.749,2.749C35.155,20.855,36.386,19.626,37.904,19.626z" />
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path fill="#D22856"
+                    d="M10.734,34.072c-1.519,0-2.749-1.23-2.749-2.75c0,1.52-1.23,2.75-2.749,2.75 c1.519,0,2.749,1.229,2.749,2.748C7.985,35.303,9.215,34.072,10.734,34.072z" />
+                </g>
+              </g>
+            </svg>
+          </div>
         </div>
         <button class="main-nav__toggle" type="button"></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--active">
               <a>Главная</a>
             </li>
             <li class="site-list__item">
@@ -70,7 +138,7 @@
       <header class="offer__header">
         <h2 class="visually-hidden">Предложения</h2>
         <p class="offer__question">Устали от серости мегаполиса?</p>
-        <p class="offer__slogan">Нам есть, что вам<br><br class="offer__slogan-gap">предложить!</p>
+        <p class="offer__slogan">Нам есть, что вам<br>предложить!</p>
       </header>
       <div class="offer__wrapper">
         <div class="wrapper">
@@ -84,13 +152,13 @@
                   несколько кликов!</p>
               </div>
               <div class="opportunity offer__item-image-2 ">
-                <h3 class="opportunity__item-head">Меняет мир <br class="opportunity__item-head--gap">вокруг</h3>
+                <h3 class="opportunity__item-head">Меняет мир вокруг</h3>
                 <p class="opportunity__item-body">Сделайте снимок и украсьте его смайликом или текстовой подписью,
                   чтобы
                   усилить эффект</p>
               </div>
               <div class="opportunity offer__item-image-3">
-                <h3 class="opportunity__item-head">Заводит <br class="opportunity__item-head--gap">новых друзей</h3>
+                <h3 class="opportunity__item-head">Заводит<br>новых друзей</h3>
                 <p class="opportunity__item-body">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
                   заводите
                   новых</p>
@@ -103,9 +171,9 @@
       </div>
       <div class="offer__wrapper-time">
         <div class="wrapper">
-          <div class="offer__opportunity offer__opportunity--time">
-            <div class="opportunity opportunity--time">
-              <h3 class="opportunity__item-head opportunity__item-head--time">Эффект<br class="offer__opportunity-gap">
+          <div class="offer__opportunity offer__opportunity--time opportunity">
+            <div class="opportunity--time">
+              <h3 class="opportunity__item-head opportunity__item-head--time">Эффект<br>
                 на
                 24 часа!</h3>
               <p class="opportunity__item-body opportunity__item-body--time">Британские ученые провели исследование и
@@ -116,7 +184,7 @@
             </div>
             <div class="offer__opportunity-image">
               <svg class="offer__opportunity-image-time" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="298px" height="345.097px"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="298" height="345"
                 viewBox="0 0 298 345.097" enable-background="new 0 0 298 345.097" xml:space="preserve">
                 <path fill="#dedede"
                   d="M264.568,102.055l5.355-5.355c7.717-7.717,9.124-18.938,3.126-24.935c-5.997-5.997-17.217-4.59-24.934,3.127l-5.386,5.385 C221.768,63.292,196.11,51.875,168,48.297v-9.583h7.658c10.914,0,19.843-8.711,19.843-19.357S186.573,0,175.659,0h-53.317  c-10.913,0-19.842,8.711-19.842,19.357s8.929,19.357,19.842,19.357H130v9.583C56.681,57.629,0,120.244,0,196.097  c0,82.291,66.709,149,149,149c82.29,0,149-66.709,149-149C298,160.434,285.465,127.703,264.568,102.055z M149,306.264 c-60.844,0-110.167-49.323-110.167-110.167S88.156,85.93,149,85.93c60.843,0,110.167,49.323,110.167,110.167  S209.843,306.264,149,306.264z" />
@@ -177,14 +245,14 @@
             <th class="tariff__table-title">База
               <p class="tariff__cost">1,99 USD</p>
             </th>
-            <th class="tariff__table-title tariff__table-title-hit">Стандарт
+            <th class="tariff__table-title tariff__table-title--hit">Стандарт
               <p class="tariff__cost">3,99 USD</p>
             </th>
             <th class="tariff__table-title">Анлим
               <p class="tariff__cost">9,99 USD</p>
             </th>
           </tr>
-          <tr class="tariff__table-item tariff__table-item-pink">
+          <tr class="tariff__table-item tariff__table-item--pink">
             <td class="tariff__table-parameter tariff__table-sell-hide tariff__table-access">Розовый фильтр</td>
             <td class="tariff__table-access">
               <span class="tariff__table-mobil">Розовый
@@ -257,7 +325,7 @@
         </div>
         <div class="contacts__info-item contacts__info--mail">
           <h3>Пишите:</h3>
-          <p>mail@htmlacademy.ru</p>
+          <p><a href="#">mail@htmlacademy.ru</a></p>
         </div>
         <div class="contacts__info-item contacts__info--address">
           <h3>Приезжайте в гости:</h3>
@@ -266,9 +334,19 @@
       </div>
     </section>
     <section class="map">
-      <iframe class="map__size"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d666.9991262146171!2d30.320825443490307!3d59.936471680721354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631057936999f%3A0xd1e1cd4d43813b33!2sBIBLIOTEKA!5e0!3m2!1sru!2sru!4v1556877715505!5m2!1sru!2sru"
-        frameborder="0" style="border:0" allowfullscreen></iframe>
+      <h2 class="visually-hidden">Карта</h2>
+
+      <div class="map__wrapper">
+        <!-- <iframe class="map__size"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586858!2d30.320853351778755!3d59.93871648178724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1557837990008!5m2!1sru!2sru"
+          width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+        <picture>
+          <source media="(min-width: 960px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+          <source media="(min-width: 660px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+          <img class="map-img" src="img/bg-map-mobile@1x.png" alt="Карта" height="150"
+            srcset="img/bg-map-mobile@1x.png 1x, img/bg-map-mobile@2x.jpg 2x">
+        </picture>
+      </div>
     </section>
   </main>
   <footer class="page-footer page-footer--index">
@@ -289,15 +367,10 @@
       <div class="page-footer__develop">
         <a class="page-footer__develop-link" href="https://htmlacademy.ru/">
           Разработано
-          <svg class="page-footer__develop-link-icon" xmlns:dc="http://purl.org/dc/elements/1.1/"
-            xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-            xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-            xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-            xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" viewBox="0 0 50 60" version="1.1" id="svg4"
-            sodipodi:docname="htmlacademy.svg" width="100%" height="100%">
-            <path
-              d="M 25.253807,0.7898051 H 25.000001 L 0,3.2457634 V 45.581805 L 25.000001,59.265 50,45.581805 V 3.2457634 Z M 46.827412,43.827548 25.000001,55.756489 3.1725892,43.827548 V 26.518891 l 21.7005098,11.92894 v 2.105104 L 10.025381,32.366411 v 2.105106 l 14.97462,8.303477 v 2.222058 l -14.97462,-8.186526 v 2.105106 l 14.97462,8.18653 15.101523,-8.303482 v -8.888227 l 6.725888,-3.742415 z m -0.126905,-19.881566 -5.964466,3.27461 -2.791877,1.520357 -13.071065,-7.133974 v 2.105108 l 11.167512,6.19837 h -0.126905 l -0.253807,0.11695 -1.649746,0.818652 -9.26396,-5.028867 v 2.105109 l 7.360406,3.97631 -1.776648,1.052554 -5.456852,-3.040708 v 2.105105 L 28.5533,34.003716 24.873099,35.991872 3.2994924,24.179882 24.873099,12.250943 Z M 46.827412,21.840876 24.873099,9.911936 3.1725892,21.840876 V 5.9356221 L 25.000001,3.8305154 46.827412,5.9356221 Z"
-              id="path2" style="fill:#2e368f;stroke-width:1.21825361" />
+          <svg class="page-footer__develop-link-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="95"
+            height="50">
+            <path fill="#d22856"
+              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
           </svg>
         </a>
       </div>
