Внесение корректировок для финальной проверки

--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
       <div class="content">
     <header class="page-header">
       <nav class="main-nav main-nav--opened">
-        <div class="logo-wrapper">
+        <div class="main-nav__logo-wrapper">
           <div class="page-header__logo">
             <a href="index.html" aria-label="Переход на главную страницу">
               <svg class="page-header__logo-image page-header__logo-image--mobile" xmlns="http://www.w3.org/2000/svg"
@@ -242,7 +242,7 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
-        <a href="index.html" title="logo" aria-label="Переход на главную страницу">
+        <a href="index.html" aria-label="Переход на главную страницу">
           <svg class="page-footer__logo-image page-footer__logo-image-mobile" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px"
             viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
