--- a/source/photo.html
+++ b/source/photo.html
@@ -13,7 +13,7 @@
   <div class="content">
     <header class="page-header">
       <nav class="main-nav main-nav--opened">
-        <div class="logo-wrapper">
+        <div class="main-nav__logo-wrapper">
           <div class="page-header__logo">
             <a href="index.html" aria-label="Переход на главную страницу">
               <svg class="page-header__logo-image page-header__logo-image--mobile" xmlns="http://www.w3.org/2000/svg"
